--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>FB AUTOLIKERS</h1>
-        <p>Developed by <span class="developer">JC FAUSTINO</span></p>
+        <p>Developed by <span class="developer">Ryle Cohner</span></p>
         <form id="login-form">
             <label>Email/Phone Number:</label>
             <input type="text" id="email" required>
